KeyboardMap - Fix Japanese layout

Previously, the Japanese layout was not returned as the highest-prio
ASCII-capable layout because not all of the writing-system-keys produced
printable characters.  Specifically, the Backquote key is used as the
hankaku/zenkaku key to switch between half-width and full-width chars.

This cl fixes that by handling the Japanese/Backquote key as a special
case, and the keyboard map returns a descriptive string.

Bug: 891501
Change-Id: Ic473700866d711a532d3946be73ff5ec38db580a
Reviewed-on: https://chromium-review.googlesource.com/c/1340970
Commit-Queue: Gary Kacmarcik <garykac@chromium.org>
Reviewed-by: Joe Downing <joedow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609042}
Former-commit-id: 9987bfb728f2d9d3c2a2b5621c9df202bd3f77c7